--- a/app/src/main/res/layout/fragment_fix.xml
+++ b/app/src/main/res/layout/fragment_fix.xml
@@ -9,5 +9,43 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/fragment_fix" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="18dp"
+        android:text="@string/fragment_fix_save" />
+    <TextView
+        android:id="@+id/fragment_fix_save"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="36dp"
+        android:text="last saved fixer" />
+    <ImageButton
+        android:id="@+id/btn_fix_save"
+        android:layout_marginTop="64dp"
+        android:layout_width="@dimen/button_margin"
+        android:layout_height="@dimen/button_margin"
+        android:layout_gravity="center_horizontal"
+        android:layout_below="@+id/edit_profil_phone"
+        android:background = "@drawable/roundedbutton"
+        android:src="@drawable/ic_save"/>
+
+
+    <ExpandableListView
+        android:id="@+id/lvExp"
+        android:layout_marginTop="400px"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </ExpandableListView>
 
 </FrameLayout>
+
+<!--<ExpandableListView
+        android:id="@+id/simpleExpandableListView"
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
+        android:divider="#f00"
+        android:childDivider="#0f0"
+        android:dividerHeight="1dp" />
+-->
