--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,32 +2,300 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="10px"
     tools:context="fr.bicyclopresto.bicyclopresto_bike_fix.Fragment_home">
 
     <!-- TODO: Update blank fragment layout -->
-    <EditText
-        android:id="@+id/fragment_home_text"
+    <ScrollView
+        android:id="@+id/home_ScrollView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true"
+        android:scrollbars="vertical">
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="10dp"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/fragment_home_vide"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:ems="10"
+                android:layout_margin="15px"
+                android:gravity="center_vertical"
+                android:text="Instructions:"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:orientation="horizontal">
+            <ImageButton
+                android:id="@+id/btn_home_cart"
+                android:layout_marginTop="18dp"
+                android:layout_width="@dimen/button_margin"
+                android:layout_height="@dimen/button_margin"
+                android:layout_below="@+id/edit_profil_phone"
+                android:background = "@drawable/roundedbutton"
+                android:src="@drawable/ic_dialog_cart"/>
+            <TextView
+                android:id="@+id/fragment_home_cart"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="15px"
+                android:gravity="center_vertical"
+
+                android:text="Commander une réparation: valider en envoyant un mail"/>
+        </LinearLayout>
+
+
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:orientation="horizontal">
+            <ImageButton
+                android:id="@+id/btn_home_fingerprint"
+                android:layout_marginTop="18dp"
+                android:layout_width="@dimen/button_margin"
+                android:layout_height="@dimen/button_margin"
+                android:layout_centerInParent="true"
+                android:layout_below="@+id/edit_profil_phone"
+                android:background = "@drawable/roundedbutton"
+                android:src="@drawable/ic_menu_fingerprint"/>
+            <TextView
+                android:id="@+id/fragment_home_fingerprint"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:ems="10"
+                android:layout_margin="15px"
+                android:gravity="center_vertical"
+                android:text="Coordonnées: édition de votre profil"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:orientation="horizontal">
+            <ImageButton
+                android:id="@+id/btn_home_motorcycle"
+                android:layout_marginTop="18dp"
+                android:layout_width="@dimen/button_margin"
+                android:layout_height="@dimen/button_margin"
+                android:layout_centerInParent="true"
+                android:layout_below="@+id/edit_profil_phone"
+                android:background = "@drawable/roundedbutton"
+                android:src="@drawable/ic_menu_motorcycle"/>
+            <TextView
+                android:id="@+id/fragment_home_motorcycle"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:ems="10"
+                android:layout_margin="15px"
+                android:gravity="center_vertical"
+                android:text="Réparation: descriptif de l'intervention attendue"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:orientation="horizontal">
+            <ImageButton
+                android:id="@+id/btn_home_today"
+                android:layout_marginTop="18dp"
+                android:layout_width="@dimen/button_margin"
+                android:layout_height="@dimen/button_margin"
+                android:layout_centerInParent="true"
+                android:layout_below="@+id/edit_profil_phone"
+                android:background = "@drawable/roundedbutton"
+                android:src="@drawable/ic_menu_today"/>
+            <TextView
+                android:id="@+id/fragment_home_today"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:ems="10"
+                android:layout_margin="15px"
+                android:gravity="center_vertical"
+                android:text="Quand: créneau horaire souhaité"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:orientation="horizontal">
+            <ImageButton
+                android:id="@+id/btn_home_location"
+                android:layout_marginTop="18dp"
+                android:layout_width="@dimen/button_margin"
+                android:layout_height="@dimen/button_margin"
+                android:layout_centerInParent="true"
+                android:layout_below="@+id/edit_profil_phone"
+                android:background = "@drawable/roundedbutton"
+                android:src="@drawable/ic_menu_add_location"/>
+            <TextView
+                android:id="@+id/fragment_home_location"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:ems="10"
+                android:layout_margin="15px"
+                android:gravity="center_vertical"
+                android:text="Lieu: localisation de votre réparation"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:orientation="horizontal">
+            <ImageButton
+                android:id="@+id/btn_home_manage"
+                android:layout_marginTop="18dp"
+                android:layout_width="@dimen/button_margin"
+                android:layout_height="@dimen/button_margin"
+                android:layout_centerInParent="true"
+                android:layout_below="@+id/edit_profil_phone"
+                android:background = "@drawable/roundedbutton"
+                android:src="@drawable/ic_menu_manage"/>
+            <TextView
+                android:id="@+id/fragment_home_manage"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:ems="10"
+                android:layout_margin="15px"
+                android:gravity="center_vertical"
+                android:text="Réparateur: choix de votre réparateur"/>
+        </LinearLayout>
+
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/fragment_home_vide"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:ems="10"
+                android:layout_margin="15px"
+                android:gravity="center_vertical"
+                android:text="Partage / nous rejoindre"/>
+        </LinearLayout>
+
+
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:orientation="horizontal">
+            <ImageButton
+                android:id="@+id/btn_home_share"
+                android:layout_marginTop="18dp"
+                android:layout_width="@dimen/button_margin"
+                android:layout_height="@dimen/button_margin"
+                android:layout_centerInParent="true"
+                android:layout_below="@+id/edit_profil_phone"
+                android:background = "@drawable/roundedbutton"
+                android:src="@drawable/ic_menu_share"/>
+            <TextView
+                android:id="@+id/fragment_home_share"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:ems="10"
+                android:layout_margin="15px"
+                android:gravity="center_vertical"
+                android:text="Partager: partager l'application"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:orientation="horizontal">
+            <ImageButton
+                android:id="@+id/btn_home_join"
+                android:layout_marginTop="18dp"
+                android:layout_width="@dimen/button_margin"
+                android:layout_height="@dimen/button_margin"
+                android:layout_centerInParent="true"
+                android:layout_below="@+id/edit_profil_phone"
+                android:background = "@drawable/roundedbutton"
+                android:src="@drawable/ic_menu_directions_bike"/>
+            <TextView
+                android:id="@+id/fragment_home_join"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:ems="10"
+                android:layout_margin="15px"
+                android:gravity="center_vertical"
+                android:text="Nous rejoindre: devenir réparateur"/>
+        </LinearLayout>
+
+
+
+
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:orientation="horizontal">
+    <ImageButton
+        android:id="@+id/btn_home_more_vert"
+        android:layout_marginTop="18dp"
+        android:layout_width="@dimen/button_margin"
+        android:layout_height="@dimen/button_margin"
+        android:layout_centerInParent="true"
+        android:layout_below="@+id/edit_profil_phone"
+        android:background = "@drawable/roundedbutton"
+        android:src="@drawable/ic_menu_more_vert"/>
+    <TextView
+        android:id="@+id/fragment_home_more_vert"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:ems="10"
-        android:inputType="textMultiLine"
-        android:text="Commander une réparation
+        android:layout_margin="15px"
+        android:gravity="center_vertical"
+        android:text="Instruction: revenir aux instructions"/>
+    </LinearLayout>
 
-    Coordonnées: édition de votre profil
-    Réparation: descriptif de l'intervention attendue
-    Quand: créneau horaire souhaité
-    Lieu: localisation de votre réparation
-    Réparateur: choix de votre réparateur
 
- Vous pouvez valider votre commande en cliquant sur le charriot.
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:orientation="horizontal">
 
- Partage / nous rejoindre
+            <TextView
+                android:id="@+id/fragment_home_vide"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:ems="10"
+                android:layout_margin="15px"
+                android:gravity="center_vertical"
+                android:text=""/>
+        </LinearLayout>
 
-    Partager: partager l'application
-    Nous rejoindre: devenir réparateur
+    </LinearLayout>
 
-Accueil: vous pouvez revenir à l'accueil (bouton en haut à droite)
-
-        "/>
+    </ScrollView>
 
 </FrameLayout>
