--- a/app/src/main/res/layout/fragment_join.xml
+++ b/app/src/main/res/layout/fragment_join.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="fr.bicyclopresto.bicyclopresto_bike_fix.Fragment_join">
 
     <!-- TODO: Update blank fragment layout -->
@@ -9,5 +10,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/fragment_join" />
+    <ImageButton
+        android:id="@+id/btn_join_save"
+        android:layout_marginTop="18dp"
+        android:layout_width="@dimen/button_margin"
+        android:layout_height="@dimen/button_margin"
+        android:layout_centerInParent="true"
+        android:layout_below="@+id/edit_profil_phone"
+        android:background = "@drawable/roundedbutton"
+        android:src="@drawable/ic_save"/>
 
 </FrameLayout>
