--- a/app/src/main/res/layout/fragment_profil.xml
+++ b/app/src/main/res/layout/fragment_profil.xml
@@ -6,6 +6,7 @@
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/edit_profil_titre"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/fragment_profil" />
@@ -15,6 +16,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_below="@+id/edit_profil_titre"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="50dp"
         android:layout_marginStart="50dp"
@@ -47,14 +49,16 @@
         android:ems="10"
         android:hint="@string/profil_number"
         android:inputType="phone" />
-    <Button
+
+    <ImageButton
         android:id="@+id/btn_profil_save"
         android:layout_marginTop="18dp"
         android:layout_width="@dimen/button_margin"
         android:layout_height="@dimen/button_margin"
         android:layout_centerInParent="true"
         android:layout_below="@+id/edit_profil_phone"
-        android:background="?attr/colorAccent"
-        android:drawableRight="@drawable/ic_save"/><!--image drawable on Right side of Text on button-->
+        android:background = "@drawable/roundedbutton"
+        android:src="@drawable/ic_save"/><!--image drawable on Right side of Text on button-->
+
 
 </RelativeLayout>
