--- a/app/src/main/res/layout/fragment_when.xml
+++ b/app/src/main/res/layout/fragment_when.xml
@@ -1,13 +1,68 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="fr.bicyclopresto.bicyclopresto_bike_fix.Fragment_when">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ScrollView
+        android:id="@+id/when_ScrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/fragment_when" />
+        android:fillViewport="true"
+        android:scrollbars="vertical">
 
-</FrameLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/edit_when_titre"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="@string/fragment_when" />
+
+            <DatePicker
+                android:id="@+id/edit_when_DatePicker"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignTop="@+id/edit_when_titre"
+                android:layout_centerInParent="true"
+                android:layout_marginTop="18dp" />
+
+            <TimePicker
+                android:id="@+id/edit_when_TimePicker"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/edit_when_DatePicker"
+                android:layout_marginTop="18dp"
+                android:timePickerMode="clock" />
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:orientation="vertical">
+
+            <ImageButton
+                android:id="@+id/btn_when_save"
+                android:layout_marginTop="18dp"
+                android:layout_width="@dimen/button_margin"
+                android:layout_height="@dimen/button_margin"
+
+                android:layout_gravity="center_horizontal"
+
+                android:background = "@drawable/roundedbutton"
+                android:src="@drawable/ic_save"/>
+
+
+            <!-- android:datePickerMode="spinner"
+        android:layout_width="@dimen/button_margin"
+            android:layout_height="@dimen/button_margin"-->
+        </FrameLayout>
+        </LinearLayout>
+
+    </ScrollView>
+</RelativeLayout>
