--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -23,7 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="Bicyclopresto Repair App"
+        android:text="Bike Repair App By Bicyclopresto "
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
