--- a/app/src/main/res/layout/fragment_what.xml
+++ b/app/src/main/res/layout/fragment_what.xml
@@ -33,7 +33,7 @@
         android:layout_centerInParent="true"
         android:layout_below="@+id/edit_what_repair"
         android:background = "@drawable/roundedbutton"
-        android:src="@drawable/ic_save"/>
+        android:src="@drawable/ic_menu_forward"/>
 
 
 
