--- a/app/src/main/res/layout/fragment_fix.xml
+++ b/app/src/main/res/layout/fragment_fix.xml
@@ -28,7 +28,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_below="@+id/edit_profil_phone"
         android:background = "@drawable/roundedbutton"
-        android:src="@drawable/ic_save"/>
+        android:src="@drawable/ic_menu_forward"/>
 
 
     <ExpandableListView
