--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -24,9 +24,14 @@
             android:id="@+id/nav_fix"
             android:icon="@drawable/ic_menu_manage"
             android:title="Réparateur" />
+        <item
+            android:id="@+id/nav_recap"
+            android:icon="@drawable/ic_menu_receipt"
+            android:title="Récapitulatif" />
+
     </group>
 
-    <item android:title="Partager / Nous rejoindre">
+    <item android:title="Diffuser / Réparer?">
         <menu>
             <item
                 android:id="@+id/nav_share"
@@ -35,7 +40,7 @@
             <item
                 android:id="@+id/nav_join"
                 android:icon="@drawable/ic_menu_directions_bike"
-                android:title="Devenir Reparateur" />
+                android:title="Bénéficier de l'appli" />
         </menu>
     </item>
 
