--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -33,8 +33,13 @@
                 android:ems="10"
                 android:layout_margin="15px"
                 android:gravity="center_vertical"
-                android:text="Instructions:"/>
+                android:text="Instructions:"
+                android:textSize="20sp"
+                android:textStyle="bold"/>
+
         </LinearLayout>
+
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -42,21 +47,21 @@
             android:layout_margin="10dp"
             android:orientation="horizontal">
             <ImageButton
-                android:id="@+id/btn_home_cart"
+                android:id="@+id/btn_home_menu"
                 android:layout_marginTop="18dp"
                 android:layout_width="@dimen/button_margin"
                 android:layout_height="@dimen/button_margin"
                 android:layout_below="@+id/edit_profil_phone"
                 android:background = "@drawable/roundedbutton"
-                android:src="@drawable/ic_dialog_cart"/>
+                android:src="@drawable/ic_menu"/>
             <TextView
-                android:id="@+id/fragment_home_cart"
+                android:id="@+id/fragment_home_menu"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="15px"
                 android:gravity="center_vertical"
 
-                android:text="Commander une réparation: valider en envoyant un mail"/>
+                android:text="Menu: choix d'une des 6 étapes"/>
         </LinearLayout>
 
 
@@ -83,7 +88,7 @@
                 android:ems="10"
                 android:layout_margin="15px"
                 android:gravity="center_vertical"
-                android:text="Coordonnées: édition de votre profil"/>
+                android:text="1 Coordonnées: édition de votre profil"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -106,7 +111,7 @@
                 android:ems="10"
                 android:layout_margin="15px"
                 android:gravity="center_vertical"
-                android:text="Réparation: descriptif de l'intervention attendue"/>
+                android:text="2 Réparation: descriptif de l'intervention attendue"/>
         </LinearLayout>
 
         <LinearLayout
@@ -130,7 +135,7 @@
                 android:ems="10"
                 android:layout_margin="15px"
                 android:gravity="center_vertical"
-                android:text="Quand: créneau horaire souhaité"/>
+                android:text="3 Quand: créneau horaire souhaité"/>
         </LinearLayout>
 
         <LinearLayout
@@ -154,7 +159,7 @@
                 android:ems="10"
                 android:layout_margin="15px"
                 android:gravity="center_vertical"
-                android:text="Lieu: localisation de votre réparation"/>
+                android:text="4 Lieu: localisation de votre réparation"/>
         </LinearLayout>
 
         <LinearLayout
@@ -178,7 +183,30 @@
                 android:ems="10"
                 android:layout_margin="15px"
                 android:gravity="center_vertical"
-                android:text="Réparateur: choix de votre réparateur"/>
+                android:text="5 Réparateur: choix de votre réparateur"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:orientation="horizontal">
+            <ImageButton
+                android:id="@+id/btn_home_receipt"
+                android:layout_marginTop="18dp"
+                android:layout_width="@dimen/button_margin"
+                android:layout_height="@dimen/button_margin"
+                android:layout_below="@+id/edit_profil_phone"
+                android:background = "@drawable/roundedbutton"
+                android:src="@drawable/ic_menu_receipt"/>
+            <TextView
+                android:id="@+id/fragment_home_cart"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="15px"
+                android:gravity="center_vertical"
+
+                android:text="6 Recapitulatif de la réparation: validation avec le bouton charriot en envoyant un mail"/>
         </LinearLayout>
 
 
@@ -196,7 +224,9 @@
                 android:ems="10"
                 android:layout_margin="15px"
                 android:gravity="center_vertical"
-                android:text="Partage / nous rejoindre"/>
+                android:text="Partage / nous rejoindre"
+                android:textSize="20sp"
+                android:textStyle="bold"/>
         </LinearLayout>
 
 
