--- a/app/src/main/res/layout/fragment_fix.xml
+++ b/app/src/main/res/layout/fragment_fix.xml
@@ -12,17 +12,21 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="18dp"
-        android:text="@string/fragment_fix_save" />
+        android:layout_marginTop="24dp"
+        android:text="@string/fragment_fix_save"
+        android:textSize="20sp"
+        android:textStyle="bold"/>
     <TextView
         android:id="@+id/fragment_fix_save"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="36dp"
-        android:text="last saved fixer" />
+        android:layout_marginTop="48dp"
+        android:text="last saved fixer"
+        android:textSize="20sp"
+        android:textStyle="bold"/>
     <ImageButton
         android:id="@+id/btn_fix_save"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="96dp"
         android:layout_width="@dimen/button_margin"
         android:layout_height="@dimen/button_margin"
         android:layout_gravity="center_horizontal"
