--- a/app/src/main/res/layout/fragment_join.xml
+++ b/app/src/main/res/layout/fragment_join.xml
@@ -1,4 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,9 +7,86 @@
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/edit_join_titre"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/fragment_join" />
+    <EditText
+        android:id="@+id/edit_join_town"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/edit_profil_titre"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="50dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="32dp"
+        android:ems="14"
+        android:hint="@string/join_town"
+        android:inputType="textPersonName"
+        android:selectAllOnFocus="true" />
+
+    <EditText
+        android:id="@+id/edit_join_mag"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/edit_join_town"
+        android:layout_alignStart="@+id/edit_join_town"
+        android:layout_below="@+id/edit_join_town"
+        android:layout_marginTop="12dp"
+        android:ems="14"
+        android:hint="@string/join_mag"
+        android:inputType="textPersonName" />
+
+    <EditText
+        android:id="@+id/edit_join_type"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/edit_join_mag"
+        android:layout_alignStart="@+id/edit_join_mag"
+        android:layout_below="@+id/edit_join_mag"
+        android:layout_marginTop="12dp"
+        android:ems="14"
+        android:hint="@string/join_type"
+        android:inputType="textPersonName" />
+
+    <EditText
+        android:id="@+id/edit_join_qualif"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/edit_join_type"
+        android:layout_alignStart="@+id/edit_join_type"
+        android:layout_below="@+id/edit_join_type"
+        android:layout_marginTop="12dp"
+        android:ems="14"
+        android:hint="@string/join_qualif"
+        android:inputType="textPersonName" />
+
+    <EditText
+        android:id="@+id/edit_join_phone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/edit_join_qualif"
+        android:layout_alignStart="@+id/edit_join_qualif"
+        android:layout_below="@+id/edit_join_qualif"
+        android:layout_marginTop="18dp"
+        android:ems="14"
+        android:hint="@string/join_phone"
+        android:inputType="phone" />
 
 
-</FrameLayout>
+    <ImageButton
+        android:id="@+id/btn_join_mail"
+        android:layout_marginTop="18dp"
+        android:layout_width="@dimen/button_margin"
+        android:layout_height="@dimen/button_margin"
+        android:layout_centerInParent="true"
+        android:layout_below="@+id/edit_join_phone"
+        android:background = "@drawable/roundedbutton"
+        android:src="@drawable/ic_contact_mail"/><!--image drawable on Right side of Text on button-->
+
+
+</RelativeLayout>
+
+
