--- a/app/src/main/res/layout/fragment_share.xml
+++ b/app/src/main/res/layout/fragment_share.xml
@@ -5,9 +5,29 @@
     tools:context="fr.bicyclopresto.bicyclopresto_bike_fix.Fragment_share">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/fragment_share" />
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:orientation="horizontal">
+        <ImageButton
+            android:id="@+id/btn_share"
+            android:layout_marginTop="18dp"
+            android:layout_width="@dimen/button_margin"
+            android:layout_height="@dimen/button_margin"
+            android:layout_below="@+id/edit_profil_phone"
+            android:background = "@drawable/roundedbutton"
+            android:src="@drawable/ic_menu_share"/>
+        <TextView
+            android:id="@+id/fragment_home_cart"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="15px"
+            android:gravity="center_vertical"
+
+            android:text="Partager l'application BikeMeeting"/>
+    </LinearLayout>
 
 </FrameLayout>
