--- a/app/src/main/res/layout/fragment_recap.xml
+++ b/app/src/main/res/layout/fragment_recap.xml
@@ -8,7 +8,8 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Coordonnées:" />
+        android:text="Coordonnées:"
+        android:textStyle="bold"/>
     <TextView
         android:id="@+id/fragment_recap_name"
         android:layout_width="match_parent"
@@ -54,7 +55,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="200dp"
-        android:text="RDV souhaité le:" />
+        android:text="RDV souhaité le:"
+        android:textStyle="bold"/>
     <TextView
         android:id="@+id/fragment_recap_date"
         android:layout_width="match_parent"
@@ -72,7 +74,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="272dp"
-        android:text="Adresse:" />
+        android:text="Adresse:"
+        android:textStyle="bold"/>
     <TextView
         android:id="@+id/fragment_recap_where"
         android:layout_width="match_parent"
@@ -84,7 +87,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="320dp"
-        android:text="Reparateur / Magasin:" />
+        android:text="Reparateur / Magasin:"
+        android:textSize="20sp"
+        android:textStyle="bold"/>
     <TextView
         android:id="@+id/fragment_recap_fix"
         android:layout_width="match_parent"
