--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#ee383f</color>
+    <color name="background_color">#ffffff</color>
+    <color name="border_color">#ee383f</color>
 </resources>
