--- a/app/src/main/res/layout/fragment_fix.xml
+++ b/app/src/main/res/layout/fragment_fix.xml
@@ -1,49 +1,79 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="10dp"
     tools:context="fr.bicyclopresto.bicyclopresto_bike_fix.Fragment_fix">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ScrollView
+        android:id="@+id/when_ScrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/fragment_fix" />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="24dp"
-        android:text="@string/fragment_fix_save"
-        android:textSize="20sp"
-        android:textStyle="bold"/>
-    <TextView
-        android:id="@+id/fragment_fix_save"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="48dp"
-        android:text="last saved fixer"
-        android:textSize="20sp"
-        android:textStyle="bold"/>
-    <ImageButton
-        android:id="@+id/btn_fix_save"
-        android:layout_marginTop="96dp"
-        android:layout_width="@dimen/button_margin"
-        android:layout_height="@dimen/button_margin"
-        android:layout_gravity="center_horizontal"
-        android:layout_below="@+id/edit_profil_phone"
-        android:background = "@drawable/roundedbutton"
-        android:src="@drawable/ic_menu_forward"/>
+        android:fillViewport="true"
+        android:scrollbars="vertical">
 
 
-    <ExpandableListView
-        android:id="@+id/lvExp"
-        android:layout_marginTop="500px"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:orientation="vertical">
 
-    </ExpandableListView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:text="@string/fragment_fix" />
 
-</FrameLayout>
+            <TextView
+                android:id="@+id/fragment_fix_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_marginTop="24dp"
+                android:text="@string/fragment_fix_save"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/fragment_fix_save"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:layout_margin="10dp"
+                android:layout_marginTop="48dp"
+                android:text="last saved fixer"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <ImageButton
+                android:id="@+id/btn_fix_save"
+                android:layout_width="@dimen/button_margin"
+                android:layout_height="@dimen/button_margin"
+
+
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="18dp"
+                android:layout_marginBottom="18dp"
+                android:background="@drawable/roundedbutton"
+                android:src="@drawable/ic_menu_forward" />
+
+            <ExpandableListView
+                android:id="@+id/lvExp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:layout_margin="10dp"
+                android:layout_marginBottom="74dp"></ExpandableListView>
+
+        </LinearLayout>
+
+
+
+
+    </ScrollView>
+</RelativeLayout>
 
 <!--<ExpandableListView
         android:id="@+id/simpleExpandableListView"
