--- a/app/src/main/res/layout/fragment_join.xml
+++ b/app/src/main/res/layout/fragment_join.xml
@@ -9,19 +9,26 @@
     <TextView
         android:id="@+id/edit_join_titre"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp"
         android:text="@string/fragment_join" />
+
     <EditText
         android:id="@+id/edit_join_town"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:layout_below="@+id/edit_profil_titre"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="50dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="37dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginRight="15dp"
         android:ems="14"
         android:hint="@string/join_town"
         android:inputType="textPersonName"
@@ -29,48 +36,52 @@
 
     <EditText
         android:id="@+id/edit_join_mag"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/edit_join_town"
-        android:layout_alignStart="@+id/edit_join_town"
         android:layout_below="@+id/edit_join_town"
+        android:layout_alignStart="@+id/edit_join_town"
+        android:layout_alignLeft="@+id/edit_join_town"
         android:layout_marginTop="12dp"
+        android:layout_marginEnd="15dp"
         android:ems="14"
         android:hint="@string/join_mag"
         android:inputType="textPersonName" />
 
     <EditText
         android:id="@+id/edit_join_type"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/edit_join_mag"
-        android:layout_alignStart="@+id/edit_join_mag"
         android:layout_below="@+id/edit_join_mag"
+        android:layout_alignStart="@+id/edit_join_mag"
+        android:layout_alignLeft="@+id/edit_join_mag"
         android:layout_marginTop="12dp"
+        android:layout_marginEnd="15dp"
         android:ems="14"
         android:hint="@string/join_type"
         android:inputType="textPersonName" />
 
     <EditText
         android:id="@+id/edit_join_qualif"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/edit_join_type"
-        android:layout_alignStart="@+id/edit_join_type"
         android:layout_below="@+id/edit_join_type"
+        android:layout_alignStart="@+id/edit_join_type"
+        android:layout_alignLeft="@+id/edit_join_type"
         android:layout_marginTop="12dp"
+        android:layout_marginEnd="15dp"
         android:ems="14"
         android:hint="@string/join_qualif"
         android:inputType="textPersonName" />
 
     <EditText
         android:id="@+id/edit_join_phone"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/edit_join_qualif"
-        android:layout_alignStart="@+id/edit_join_qualif"
         android:layout_below="@+id/edit_join_qualif"
+        android:layout_alignStart="@+id/edit_join_qualif"
+        android:layout_alignLeft="@+id/edit_join_qualif"
         android:layout_marginTop="18dp"
+        android:layout_marginEnd="15dp"
         android:ems="14"
         android:hint="@string/join_phone"
         android:inputType="phone" />
