--- a/app/src/main/res/layout/fragment_recap.xml
+++ b/app/src/main/res/layout/fragment_recap.xml
@@ -2,105 +2,186 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="10dp"
     tools:context="fr.bicyclopresto.bicyclopresto_bike_fix.Fragment_recap">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ScrollView
+        android:id="@+id/recap_ScrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="  Coordonnées:"
-        android:textStyle="bold"/>
-    <TextView
-        android:id="@+id/fragment_recap_name"
+        android:fillViewport="true"
+        android:scrollbars="vertical">
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="24dp"
-        android:text="  name" />
-    <TextView
-        android:id="@+id/fragment_recap_mail"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="48dp"
-        android:text="  mail" />
-    <TextView
-        android:id="@+id/fragment_recap_phone"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="72dp"
-        android:text="  phone" />
+        android:layout_margin="10dp"
+        android:orientation="vertical">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="96dp"
-        android:text="  Réparations:"
-        android:textSize="20sp"
-        android:textStyle="bold"/>
-    <TextView
-        android:id="@+id/fragment_recap_ambulant"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="120dp"
-        android:text="  mode reparation"
-        android:textSize="20sp"
-        android:textStyle="bold"/>
-    <TextView
-        android:id="@+id/fragment_recap_repair"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="144dp"
-        android:text="  quelle reparation" />
+        <TextView
+            android:id="@+id/fragment_recap_coord"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            android:text="  Coordonnées:"
+            android:textStyle="bold" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="200dp"
-        android:text="  RDV souhaité le:"
-        android:textStyle="bold"/>
-    <TextView
-        android:id="@+id/fragment_recap_date"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="224dp"
-        android:text="  RDV date" />
+        <TextView
+            android:id="@+id/fragment_recap_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/fragment_recap_coord"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="3dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginBottom="3dp"
+            android:text="  name" />
+
+        <TextView
+            android:id="@+id/fragment_recap_mail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/fragment_recap_name"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="3dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginBottom="3dp"
+            android:text="  mail" />
+
+        <TextView
+            android:id="@+id/fragment_recap_phone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/fragment_recap_mail"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="3dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginBottom="3dp"
+            android:text="  phone" />
+
+        <TextView
+            android:id="@+id/fragment_recap_repairT"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/fragment_recap_phone"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            android:text="  Réparations:"
+
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/fragment_recap_ambulant"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/fragment_recap_repairT"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="3dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginBottom="3dp"
+            android:text="  mode reparation" />
+
+        <TextView
+            android:id="@+id/fragment_recap_repair"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/fragment_recap_ambulant"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="3dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginBottom="3dp"
+            android:text="  quelle reparation" />
+
+        <TextView
+            android:id="@+id/fragment_recap_RDV"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/fragment_recap_repair"
+            android:layout_margin="10dp"
+            android:text="  RDV souhaité le:"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/fragment_recap_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/fragment_recap_RDV"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="3dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginBottom="3dp"
+            android:text="  RDV date" />
 
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="248dp"
-        android:text="  Adresse:"
-        android:textStyle="bold"/>
-    <TextView
-        android:id="@+id/fragment_recap_where"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="272dp"
-        android:text="  Adresse" />
+        <TextView
+            android:id="@+id/fragment_recap_adresse"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/fragment_recap_date"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="3dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="3dp"
+            android:text="  Adresse:"
+            android:textStyle="bold" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="296dp"
-        android:text="  Reparateur / Magasin:"
-        android:textSize="20sp"
-        android:textStyle="bold"/>
-    <TextView
-        android:id="@+id/fragment_recap_fix"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="320dp"
-        android:text="  Reparateur / magasin"
-        android:textSize="20sp"
-        android:textStyle="bold"/>
+        <TextView
+            android:id="@+id/fragment_recap_where"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/fragment_recap_adresse"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="3dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginBottom="3dp"
+            android:text="  Adresse" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="344dp"
-        android:text="\n Le réparateur prendra contact avec vous \n\n
+        <TextView
+            android:id="@+id/fragment_recap_magasin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/fragment_recap_where"
+
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="3dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="3dp"
+            android:text="  Reparateur / Magasin:"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/fragment_recap_fix"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/fragment_recap_magasin"
+
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="3dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginBottom="3dp"
+            android:text="  Reparateur / magasin"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/fragment_recap_instruction"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/fragment_recap_fix"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="74dp"
+            android:background="@drawable/my_border"
+            android:padding="2dp"
+            android:text="\n Le réparateur prendra contact avec vous \n\n
 Veuillez valider en appuyant sur le charriot \n\n
 Puis sur envoyer Ou effectuez des modifications \n\n
-L'application envoie un email qui contient votre demande et un fichier vcard qui contient vos coordonnées. \n\n" />
-
+L'application envoie un email qui contient votre demande et un fichier vcard qui contient vos coordonnées.\n" />
+    </RelativeLayout>
+    </ScrollView>
 </FrameLayout>
